--- a/SanphamTB.html
+++ b/SanphamTB.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Landing-page-TB</title>
+    <title>lp-tb</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/font.css" />
     <link rel="stylesheet" href="themify-icons-font/themify-icons/themify-icons.css">
